Kubernetes_k3s/joplin/joplin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  namespace: joplin
  labels:
    app: joplin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      labels:
        app: joplin
    spec:
      containers:
      - name: joplin
        image: joplin/server:latest
        ports:
        - containerPort: 22300
        volumeMounts:
      volumes:

---

apiVersion: v1
kind: Service
metadata:
  name: joplin-service
  namespace: joplin
spec:
  type: ClusterIP # default
  selector:
    app: joplin
  ports:
    - protocol: TCP
      port: 22300
      targetPort: 22300
