Kubernetes_k3s/joplin/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: joplin
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: arm64v8/postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-db
          mountPath: /path/to/postgresql/data
      volumes:
      - name: postgres-db
        hostPath:
          path: /path/to/data/postgres
          type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: joplin
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
